# ML-Piece-detector-V2

./: .gitignore  Bitacora_PC_Inspector.docx  CMakeLists.txt  CMakePresets.json  PROMPT_MAESTRO_PC_INSPECTOR.md  PROMPT_MEJORAS_HERRAMIENTAS_CALIBRACION.md  PROMPT_MEJORAS_PLANTILLAS_FLUJO.md  README.md  run.bat  run.ps1  skills-lock.json
.agents/skills/cmake/: SKILL.md
.agents/skills/qt-cpp-docs/: SKILL.md
.agents/skills/qt-cpp-review/: README.md
.agents/skills/qt-cpp-review/references/: qt-framework-checklist.md
.agents/skills/sqlite-database-expert/: SKILL.md
.agents/skills/sqlite-database-expert/references/: advanced-patterns.md
.claude/: settings.json
.claude/skills/cmake/references/: templates.md
.claude/skills/cpp-coding-standards/: SKILL.md
.claude/skills/cpp-testing/: SKILL.md
.claude/skills/qt-cpp-docs/: LICENSE.txt  README.md
.claude/skills/qt-cpp-review/: SKILL.md
.claude/skills/qt-cpp-review/references/: qt-deprecated-classes.md  qt-review-checklist.md
.claude/skills/qt-cpp-review/references/lint-scripts/: qt_review_lint.py
.claude/skills/sqlite-database-expert/references/: security-examples.md
src/: main.cpp
src/camera/: CMakeLists.txt  camera_controller.cpp  camera_controller.h  camera_enumerator.cpp  camera_enumerator.h  camera_info.h  frame_utils.cpp  frame_utils.h  native_cameras.cpp  native_cameras.h
src/core/: CMakeLists.txt  crash_guard.cpp  crash_guard.h  fps_counter.h  logging.cpp  logging.h  result.h
src/database/: CMakeLists.txt  blob_codec.h  db.cpp  db.h  schema.cpp  schema.h  statement.cpp  statement.h
src/domain/: CMakeLists.txt  calibration.cpp  calibration.h  capture_quality.cpp  capture_quality.h  verdict.cpp  verdict.h
src/engine/: CMakeLists.txt  embed_fn.h  inspection_engine.cpp  inspection_engine.h  registration_session.cpp  registration_session.h
src/inspection_editor/: CMakeLists.txt  editor_window.cpp  editor_window.h
src/inspection_editor/canvas/: editor_canvas.cpp  editor_canvas.h  tool_icons.cpp  tool_icons.h
src/inspection_editor/execution/: edge_detection.cpp  edge_detection.h  tool_executor.cpp  tool_executor.h
src/inspection_editor/tools/: template_io.cpp  template_io.h  tool_geometry.cpp  tool_geometry.h  tool_types.h  undo_stack.h
src/ml/: CMakeLists.txt  embedding_extractor.cpp  embedding_extractor.h  reference.cpp  reference.h
src/repositories/: CMakeLists.txt  inspection_repository.cpp  inspection_repository.h  piece_repository.cpp  piece_repository.h  settings_repository.cpp  settings_repository.h  tool_repository.cpp  tool_repository.h
src/ui/: CMakeLists.txt  analysis_overlay.h  app_repositories.h  calibration_dialog.cpp  calibration_dialog.h  detection_dialog.cpp  detection_dialog.h  history_dialog.cpp  history_dialog.h  inspection_result_dialog.cpp  inspection_result_dialog.h  main_window.cpp  main_window.h  piece_manager_dialog.cpp  piece_manager_dialog.h  preferences_dialog.cpp  preferences_dialog.h  registration_wizard.cpp  registration_wizard.h  shortcuts_dialog.cpp  shortcuts_dialog.h  stats_bar_chart.cpp  stats_bar_chart.h  template_manager_dialog.cpp  template_manager_dialog.h  video_widget.cpp  video_widget.h
src/vision/: CMakeLists.txt  contour_analysis.cpp  contour_analysis.h  fixture_stabilizer.cpp  fixture_stabilizer.h  orientation.cpp  orientation.h  orientation_anchor.cpp  orientation_anchor.h  pipeline.cpp  pipeline.h  plane_scale.cpp  plane_scale.h  position_fixture.cpp  position_fixture.h  quality_metrics.cpp  quality_metrics.h  segmentation.cpp  segmentation.h  types.h
tests/: CMakeLists.txt  test_crash_guard.cpp  test_database.cpp  test_domain.cpp  test_engine.cpp  test_fps_counter.cpp  test_frame_utils.cpp  test_helpers.h  test_inspection.cpp  test_ml.cpp  test_result.cpp  test_vision.cpp
tools/: prepare_model.cpp
